<resources>
    <string name="app_name">Habitus - Homines</string>
    <string name="registration">REGISTRATION</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="prefer_not_to_say">Prefer not to say</string>
    <string name="register">REGISTER</string>
    <string name="select_gender">Select gender</string>
    <string name="locationpin">LocationPin</string>
    <string name="reg_once">Registration can be done only once, so please enter the correct credentials</string>
    <string name="welcome_guest">Welcome, GUEST !</string>
    <string name="tabsimage">TabsImage</string>
    <string name="medical_shop">MEDICAL SHOP</string>
    <string name="grocery_store">GROCERY STORE</string>
    <string name="choose_an_option">Choose an option</string>
    <string name="register_as_a_volunteer">Register as a volunteer</string>
    <string name="volunteer_text">Volunteers do not necessarily have the time; they just have the heart. Volunteers are the only human beings on the face of the earth who reflect this nation\'s compassion, unselfish caring, patience, and just plain loving one another. Click here to be a part in this fight against Corona!</string>
    <string name="select_medical_shop">Select your nearest Medical shop</string>
    <string name="upload_your_prescription">Upload your prescription (For necessary tablets)</string>
    <string name="camera_button">Camera button</string>
    <string name="your_nearest_medical_shop">Your nearest medical shop</string>
    <string name="your_prescription">Your prescription</string>
    <string name="add_your_tablets_in_the_list">Add your tablets in the list</string>
    <string name="tablet_name">Tablet name</string>
    <string name="quantity">Quantity</string>
    <string name="submit">SUBMIT</string>
    <string name="sample_tablet">Sample tablet</string>
    <string name="_40">40</string>
    <string name="prescription_image">Prescription Image</string>
    <string name="select_your_nearest_grocery_store">Select your nearest grocery store</string>
    <string name="your_nearest_grocery_store">Your nearest grocery store</string>
    <string name="add_items_to_your_grocery_list">Add items to your grocery list</string>
    <string name="item_name">Item name</string>
    <string name="quantity_in_kgs">Quantity (in kgs)</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_places_key">AIzaSyA-jTNigOJ8f3zQ6qketJ1QRVLTy7rkduo</string>
    <string name="search">Search</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="notification_icon">Notification icon</string>
    <string name="type">TYPE :</string>
    <string name="shop">Shop :</string>
    <string name="status">Status :</string>
    <string name="time_slot">Time slot :</string>
    <string name="payment_page">Payment page</string>
    <string name="we_request">We request you to pay through online, as CORONA can spread through cash as well</string>
    <string name="please_select_volunteer">Please select VOLUNTEER REQUEST only if you suffer from any disability / if you are an elderly person</string>
    <string name="volunteer_request">Volunteer request</string>
    <string name="idea_image">Idea Image</string>
    <string name="learn_about_covid_19">LEARN ABOUT COVID-19</string>
    <string name="virus_image">Virus image</string>
    <string name="some_of_the_previous_ideas">Some of the previous ideas</string>
    <string name="give_your_idea_here">Give your idea here</string>
    <string name="content_of_the_idea">Content of the idea</string>
    <string name="title_of_the_idea">Title of the idea (Please don\'t give existing titles)</string>
    <string name="submit_idea">Submit idea</string>
    <string name="coronavirus_disease_covid_19_pandemic">Coronavirus disease (COVID-19) Pandemic</string>
    <string name="we_collect_every_information_from_world_health_organization_s_who_official_website">We collect every information from World Health Organization\'s (WHO) official website.</string>
    <string name="outlet_finder">OUTLET FINDER</string>
    <string name="title_activity_outlet_finder">OutletFinderActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>
